data/derived/fa15/progs/unify/prog0317.ml.out
Characters 208-218:
  | _,(carry, digits) -> if (carry = 1) then (1, digits @ (fst, sec)) else (0, digits @ (fst, sec)) in
                                                          ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
